--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xunithub",
   "description": "Parsing xunit reports, and posting them as Github comments ",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "contributors" : [
     {
       "name" : "Pranav Verma",
@@ -22,7 +22,8 @@
       "yargs" : "3.8.0",
       "q" : "1.3.0",
       "xml2js" : "0.4.8",
-      "html-entities" : "1.1.2"
+      "html-entities" : "1.1.2",
+      "debug" : "2.2.0"
   },
   "license": "MIT"
 
